<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_SequenceState" Id="{350668a6-84f2-4509-8326-7dba6a9bba83}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_SequenceState :
(
	RUN,
	STARTING,
	STOP,
	STOPPING,
	HOLD,
	WAIT,
	COMPLETE
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>